--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+  <link href="main/css" rel="stylesheet" type="text/css">
   
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 
@@ -16,12 +18,24 @@
 </head>
 <body>
 
-  We're coming soon
+  <header>
+    <img src="images/logo.svg">
+  </header>
+  <main>
+    <section id="hero">
+      <img src="images/hero-mobile.jpg" id="hero-image">
+    </section>
+    <section id="info">
+      <h1>We're <span>coming soon</span></h1>
+      <p>Hello fellow shoppers! We're currently building our new fashion store. 
+  Add your email below to stay up-to-date with announcements and our launch deals.</p>
+    </section>
+    <form>
+      <input type="email" placeholder="Email Address" id="email-address">
+      <button></button>
+    </form>
 
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
-
-  Email Address
+  </main>
   
   <footer>
     <p class="attribution">
