--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-  <link href="main/css" rel="stylesheet" type="text/css">
+  <link href="main.css" rel="stylesheet" type="text/css">
   
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 
@@ -19,28 +19,36 @@
 <body>
 
   <header>
-    <img src="images/logo.svg">
+    <div class="content-wrapper">
+      <img src="images/logo.svg" id="logo">
+    </div>
   </header>
   <main>
-    <section id="hero">
-      <img src="images/hero-mobile.jpg" id="hero-image">
-    </section>
-    <section id="info">
-      <h1>We're <span>coming soon</span></h1>
-      <p>Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.</p>
-    </section>
-    <form>
-      <input type="email" placeholder="Email Address" id="email-address">
-      <button></button>
-    </form>
+    
+      <section id="hero">
+        <img src="images/hero-mobile.jpg" id="hero-image">
+      </section>
+    
+      <div class="content-wrapper">
+      <section id="info">
+          <h1>We're<br><span>coming<br>soon</span></h1>
+          <p>Hello fellow shoppers! We're currently building our new fashion store. 
+          Add your email below to stay up-to-date with announcements and our launch deals.</p>
+      </section>
+
+      <form>
+        <input type="email" placeholder="Email Address" id="email-address">
+        <button><img src="images/icon-arrow.svg"></button>
+      </form>
+
+    </div>
 
   </main>
   
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="http://www.clairethompson.tech">Claire Thompson</a>.
     </p>
   </footer>
 </body>
