--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">
   <link href="main.css" rel="stylesheet" type="text/css">
+
+  <script src="script.js"></script>
   
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 
@@ -26,7 +28,6 @@
   <main>
     
       <section id="hero">
-        <img src="images/hero-mobile.jpg" id="hero-image">
       </section>
     
       <div class="content-wrapper">
