Adjustments to tablet and desktop styles

--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
       <div class="content-wrapper">
       <section id="info">
           <h1>We're<br><span>coming<br>soon</span></h1>
-          <p>Hello fellow shoppers! We're currently building our new fashion store. 
-          Add your email below to stay up-to-date with announcements and our launch deals.</p>
+          <div id="hello">
+            <p>Hello fellow shoppers! We're currently building our new fashion store. 
+            Add your email below to stay up-to-date with announcements and our launch deals.</p>
+            <form>
+              <input type="email" placeholder="Email Address" id="email-address">
+              <button><img src="images/icon-arrow.svg"></button>
+            </form>
+          </div>
       </section>
-
-      <form>
-        <input type="email" placeholder="Email Address" id="email-address">
-        <button><img src="images/icon-arrow.svg"></button>
-      </form>
 
     </div>
 
